--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - 动态黑客雨页面</title>
+    <title>404 - 你小子</title>
     <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
     <style>
